--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -16,7 +16,7 @@
   <div style="height: 56px;"></div>
   <custom-actions bind="customActions"></custom-actions>
   <custom-drawer bind="customDrawer"></custom-drawer>
-  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <custom-header title="首页" bind @submit="showDrawer"></custom-header>
   <script src="js/shared.js"></script>
   <script src="js/index.js"></script>
 </body>
