--- a/app/backend/user.html
+++ b/app/backend/user.html
@@ -11,8 +11,7 @@
   <script type="module" src="../components/custom-drawer.js"></script>
   <script src="../components/toast.js"></script>
   <script type="module" src="../components/custom-user-profile.js"></script>
-
-
+  <script type="module" src="../components/custom-user-options.js"></script>
 </head>
 
 <body>
@@ -20,6 +19,7 @@
   <custom-header title="用户" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
   <custom-user-profile bind="customUserProfile" @submit=""></custom-user-profile>
+  <custom-user-options bind="customUserOptions" @submit=""></custom-user-options>
   <custom-toast bind="toast"></custom-toast>
   <script src="js/shared.js"></script>
   <script src="js/user.js"></script>
