--- a/app/backend/user.html
+++ b/app/backend/user.html
@@ -21,7 +21,7 @@
   <div style="height: 56px;"></div>
   <custom-user-profile bind="customUserProfile" @submit=""></custom-user-profile>
   <div style="height: 8px;"></div>
-  <custom-user-options bind="customUserOptions" @submit=""></custom-user-options>
+  <custom-user-options bind="customUserOptions" @submit="onCustomUserLessons"></custom-user-options>
   <custom-user-lessons bind="customUserLessons" @submit=""></custom-user-lessons>
   <custom-toast bind="toast"></custom-toast>
   <script src="js/shared.js"></script>
