--- a/index.html
+++ b/index.html
@@ -216,3 +216,7 @@
   style="width: 24px;height: 24px;fill: currentColor;color: #333;display:flex;align-items: center;justify-content: center;margin-right: 16px;">
 
 </div>
+
+<script>
+  [...new Array(10).keys()].map(x => 1672588800+ 3600 * 24 + 3600 * 24 * 7 * (x + 1));
+</script>
