--- a/app/backend/updateLesson.html
+++ b/app/backend/updateLesson.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>课程</title>
-  <link rel="stylesheet" href="css/notice.css">
+  <link rel="stylesheet" href="css/updateLesson.css">
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
   <script src="../components/toast.js"></script>
@@ -31,7 +31,7 @@
   <custom-submit-bar bind @submit="onSubmitBar"></custom-submit-bar>
   <custom-toast bind="toast"></custom-toast>
   <script src="js/shared.js"></script>
-  <script src="js/lesson.js"></script>
+  <script src="js/updateLesson.js"></script>
 </body>
 
 </html>
