--- a/index.html
+++ b/index.html
@@ -218,5 +218,91 @@
 </div>
 
 <script>
-  [...new Array(10).keys()].map(x => 1672588800+ 3600 * 24 + 3600 * 24 * 7 * (x + 1));
+  [...new Array(10).keys()].map(x => 1672588800 + 3600 * 24 + 3600 * 24 * 7 * (x + 1));
+</script>
+
+
+<script>
+
+  function shortDateString(seconds) {
+    const date = new Date(seconds * 1000);
+    return `${date.getMonth() + 1}月${date.getDate()}日`;
+  }
+  function formatSeconds(s) {
+    if (isNaN(s)) return '0:00';
+    if (s < 0) s = -s;
+    const time = {
+      hour: Math.floor(s / 3600) % 24,
+      minute: Math.floor(s / 60) % 60,
+    };
+    return Object.entries(time)
+      .filter((val, index) => index || val[1])
+      .map(val => (val[1] + '').padStart(2, '0'))
+      .join(':');
+  }
+
+  function durationToSeconds(duration) {
+    let result = 0;
+    if (/(\d{1,2}:){1,2}\d{1,2}/.test(duration)) {
+      const pieces = duration.split(':');
+      for (let i = pieces.length - 1; i > -1; i--) {
+        result += Math.pow(60, i) * parseInt(pieces[pieces.length - i - 1]);
+      }
+      return result;
+    }
+    result = parseInt(duration);
+    if (isNaN(result)) {
+      result = 0;
+    }
+    return result;
+  }
+  function timeSpan(atime, btime) {
+    var milliseconds = +(btime || new Date()) - +atime;
+    var seconds = ~~(milliseconds / 1000);
+    var minutes = ~~(milliseconds / (1 * 60 * 1000));
+    var hours = ~~(milliseconds / (1 * 60 * 60 * 1000));
+    var days = ~~(milliseconds / (1 * 24 * 60 * 60 * 1000));
+    var years = ~~(days / 365.5);
+    return {
+      years,
+      days,
+      hours,
+      minutes,
+      seconds,
+      milliseconds
+    };
+  }
+
+  function timeAgo(time, locales = 'zh') {
+    const ts = timeSpan(time);
+    if (!i18n[locales]) locales = 'zh';
+    if (ts.seconds < 60) return i18n[locales].justNow;
+    if (ts.minutes < 60) return ts.minutes + ' ' + i18n[locales].minutesAgo;
+    if (ts.hours < 24) return ts.hours + ' ' + i18n[locales].hoursAgo;
+    if (ts.days < 7) return ts.days + ' ' + i18n[locales].daysAgo;
+    if (ts.days < 30) return ~~(ts.days / 7) + ' ' + i18n[locales].weeksAgo;
+    if (ts.years < 1) return ~~(ts.days / 30) + ' ' + i18n[locales].monthsAgo;
+    return ts.years + ' ' + i18n[locales].yearsAgo;
+  }
+
+  const i18n = {
+    zh: {
+      justNow: '刚刚',
+      minutesAgo: '分钟前',
+      hoursAgo: '小时前',
+      daysAgo: '天前',
+      weeksAgo: '周前',
+      monthsAgo: '个月前',
+      yearsAgo: '年前',
+    },
+    en: {
+      justNow: 'just now',
+      minutesAgo: 'minutes ago',
+      hoursAgo: 'hours ago',
+      daysAgo: 'days ago',
+      weeksAgo: 'weeks ago',
+      monthsAgo: 'months ago',
+      yearsAgo: 'years ago',
+    },
+  };
 </script>
