--- a/app/backend/lesson.html
+++ b/app/backend/lesson.html
@@ -18,7 +18,7 @@
   <custom-header title="课程" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
 
-  <custom-lesson bind="customLesson" @submit=""></custom-lesson>
+  <custom-lesson bind="customLesson" @submit="onCustomLessonSubmit"></custom-lesson>
   <custom-toast bind="toast"></custom-toast>
   <script src="js/shared.js"></script>
   <script src="js/lesson.js"></script>
