--- a/app/backend/vipcard.html
+++ b/app/backend/vipcard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>课程</title>
+  <title>会员卡</title>
   <link rel="stylesheet" href="css/vipcard.css">
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
@@ -17,10 +17,10 @@
 
 <body>
   <custom-drawer bind="customDrawer"></custom-drawer>
-  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <custom-header title="会员卡" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
 
-  <custom-date-picker bind="customDatePicker" @submit=""></custom-date-picker>
+  <custom-date-picker bind="customDatePicker" @submit="" style="display:none" ></custom-date-picker>
   <custom-field bind="nameInput" @submit="onNameInput" label="课程名称" placeholder="请输入课程名称"></custom-field>
   <custom-submit-bar bind @submit="onSubmitBar"></custom-submit-bar>
   <custom-toast bind="toast"></custom-toast>
