--- a/app/backend/lessons.html
+++ b/app/backend/lessons.html
@@ -17,8 +17,8 @@
   <custom-header title="课程" bind @submit="showDrawer" flat="true"></custom-header>
   <div style="height: 56px;"></div>
 
-  <custom-filter></custom-filter>
-  <div id="layout" style="padding: 16px 16px 56px;">
+  <custom-filter bind="customFilter" @submit="filterHandler"></custom-filter>
+  <div bind="layout" style="padding: 16px 16px 56px;">
   </div>
   <script src="js/custom-filter.js"></script>
   <script src="js/custom-mini-item.js"></script>
