--- a/app/backend/image.html
+++ b/app/backend/image.html
@@ -8,12 +8,13 @@
     <title>课表</title>
     <link rel="stylesheet" href="css/image.css">
     <script src="https://cdn.jsdelivr.net/npm/html-to-image@1.11.2/dist/html-to-image.js"></script>
+    <script src="../components/toast.js"></script>
 </head>
 
 <body>
 
     <div class="wrapper">
-        <div id="my-node" class="main">
+        <div bind="picture" class="main">
             <div class="grid">
                 <div class="title">
                     晨蕴瑜伽•普拉提课程表
@@ -82,22 +83,10 @@
             </div>
         </div>
     </div>
-
-    <script>
-       
-var node = document.getElementById('my-node');
-
-        htmlToImage.toJpeg(node)
-            .then(function (dataUrl) {
-                node.remove();
-                var img = new Image();
-                img.src = dataUrl;
-                document.body.appendChild(img);
-            })
-            .catch(function (error) {
-                console.error('oops, something went wrong!', error);
-            });
-    </script>
+    <custom-toast bind="toast"></custom-toast>
+    <script src="js/shared.js"></script>
+    <script src="js/image.js"></script>
+    
 </body>
 
 </html>
