--- a/app/backend/users.html
+++ b/app/backend/users.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>用户列表</title>
   <link rel="stylesheet" href="css/users.css">
-  <script type="module" src="../components/custom-header.js"></script>
+  <script src="custom-header.js"></script>
   <script src="custom-drawer.js"></script>
   <script src="custom-users.js"></script>
   <script src="custom-actions.js"></script>
