--- a/app/backend/user.html
+++ b/app/backend/user.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>用户</title>
   <link rel="stylesheet" href="css/user.css">
-  <script type="module" src="../components/custom-header.js"></script>
-  <script type="module" src="../components/custom-drawer.js"></script>
+  <script src="custom-header.js"></script>
+  <script src="custom-drawer.js"></script>
   <script src="../components/toast.js"></script>
   <script type="module" src="../components/custom-user-profile.js"></script>
   <script type="module" src="../components/custom-user-options.js"></script>
